--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
         <div class="order-section scroll-section" id='order'>
             <!-- Orders Open -->
             <div class="section-title">catch us at our next stop.</div>
-            <div class="section-title">Southwyck Lake Park. <br> 2515 Shelby Dr. Pearland, TX 77584.</div>
-            <div class="section-title">may 25th.<br>3:00 - 6:00 pm.</div>
+            <div class="section-title">Sunrise Lakes Clubhouse. <br> 9310 Sundown Dr, Pearland, TX 77584.</div>
+            <div class="section-title">august 12th.<br>3:00 - 6:00 pm.</div>
 
             <a href="https://form.jotform.com/232128838318157" class="order-link section-title" onclick="">
                 <div>order here.</div>
